--- a/assets/styles.css
+++ b/assets/styles.css
@@ -5,6 +5,13 @@
 }
 @font-face {
     font-family: 'OpenX';
+    src: url('./arenq.otf');
+    font-weight: 100;
+    font-style: normal;
+    font-size: large;
+}
+@font-face {
+    font-family: 'OpenS';
     src: url('./Zain-Light.ttf');
     font-weight: 100;
     font-style: normal;
@@ -12,8 +19,8 @@
   }
 body {
     display: flex;
+    font-family: 'OpenS', sans-serif;
     justify-content: center;
-    font-family: 'OpenX', sans-serif;
     align-items: center;
     min-height: 100vh;
     background: #25252b;
@@ -29,6 +36,7 @@ body {
 }
 
 h1 {
+    font-family: 'OpenX', sans-serif;
     color: #4a4a4a; 
     text-align: center;
     margin-top: 22px;
