--- a/assets/styles.css
+++ b/assets/styles.css
@@ -39,7 +39,7 @@ h1 {
     font-family: 'OpenX', sans-serif;
     color: #4a4a4a; 
     text-align: center;
-    margin-top: 22px;
+    margin-top: 30px;
     margin-bottom: 25px;
     font-size: 2.5em;
 }
@@ -118,7 +118,8 @@ button:hover {
     z-index: 1; /* Ensure the plot is above the border */
 }
 .plotly-graphx {
-    box-shadow: 0 0 10px rgba(255, 255, 255, 0.973)
+    box-shadow: 0 0 10px rgba(255, 255, 255, 0.973);
+    background: #111111;
 }
 .box {
     position: relative;
@@ -171,8 +172,8 @@ button:hover {
     display: flex;
     flex-direction: column;
     overflow-y: scroll; /* Allow vertical scrolling */
-    height: 70%; /* Set a maximum height for the chat log */
-    border: 1px solid #3c3c3c;
+    height: 80%; /* Set a maximum height for the chat log */
+    border: 1px solid #1f1f1f;
     border-radius: 15px;
     background-color: #1f1f1f; /* Darker background color */
     padding: 10px;
@@ -220,7 +221,7 @@ button {
     background-color: #00c6ff;
     color: #0f0f0f;
     border: none;
-    border-radius: 22px;
+    border-radius: 24px;
     font-size: 16px;
     cursor: pointer;
     transition: background-color 0.3s, transform 0.3s;
@@ -275,4 +276,84 @@ button:hover {
     100% {
         transform: translateX(0);
     }
+}
+
+.header_component {
+    width: 990px;
+    height: 80px;
+    color: white;
+    display: flex;
+    align-items: center;
+    margin-left: 40px;
+    margin-top: 35px;
+    padding: 10px;
+    background-color: rgba(0, 0, 0, 0.5); 
+    border-radius: 24px;
+    box-shadow: 0 0 10px rgba(255, 255, 255, 0.973);
+}
+
+.dropdown {
+    margin-left: 40px;
+    background-color: #444444;
+    border: none; 
+    width: 200px;
+    box-shadow: 0 0 10px rgba(158, 220, 238, 0.5);
+}
+
+.dropdown .Select-control {
+    background-color: #444444;
+    color: #ffffff;
+}
+
+.dropdown .Select-control:hover {
+    border-color: #ffffff;
+}
+
+.dropdown .Select-menu {
+    background-color: #333333;
+    color: #ffffff; 
+}
+
+.dropdown .Select-option {
+    color: #0cdfca;
+}
+
+.dropdown .Select-option:hover {
+    background-color: #1f1f1f;
+}
+
+.range_slider {
+    width: 450px;
+    margin: 20px 0;
+}
+
+.range_slider .rc-slider-track {
+    background-color: rgba(181, 15, 203, 0.867);
+    height: 4px;
+    border-radius: 4px;
+}
+
+.range_slider .rc-slider-handle {
+    background-color: #ffffff;
+    border: 2px solid #a00f9e;
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
+}
+
+.range_slider .rc-slider-handle:hover {
+    background-color: black; 
+}
+
+.range_slider .rc-slider-mark {
+    color: #ffffff;
+    font-size: 12px;
+}
+
+.range_slider .rc-slider-tooltip {
+    background-color: #4CAF50;
+    color: #ffffff;
+    border-radius: 4px;
+    padding: 5px;
 }
