--- a/assets/styles.css
+++ b/assets/styles.css
@@ -106,16 +106,16 @@ button:hover {
 
 .graph-container {
     position: absolute;
-    margin-top: 20px; /* Space between graphs */
+    margin-top: 20px; 
 }
 
 .plotly-graph {
     padding: 10px;
     width: 100%;
     height: 100%;
-    border-radius: 15px; /* Match the border radius of the graph */
+    border-radius: 15px; 
     position: relative;
-    z-index: 1; /* Ensure the plot is above the border */
+    z-index: 1; 
 }
 .plotly-graphx {
     box-shadow: 0 0 10px rgba(255, 255, 255, 0.973);
@@ -171,28 +171,28 @@ button:hover {
     margin-top: 0px;
     display: flex;
     flex-direction: column;
-    overflow-y: scroll; /* Allow vertical scrolling */
-    height: 80%; /* Set a maximum height for the chat log */
+    overflow-y: scroll; 
+    height: 80%;
     border: 1px solid #1f1f1f;
     border-radius: 15px;
-    background-color: #1f1f1f; /* Darker background color */
+    background-color: #1f1f1f; 
     padding: 10px;
-    scrollbar-width: thin; /* Set scrollbar width for Firefox */
-    scrollbar-color: #00c6ff #1f1f1f; /* Set scrollbar color for Firefox */
+    scrollbar-width: thin; 
+    scrollbar-color: #00c6ff #1f1f1f; 
     z-index: 1;
 }
 
 .chat-container::-webkit-scrollbar {
-    width: 8px; /* Set scrollbar width for Chrome, Safari, and Opera */
+    width: 8px;
 }
 
 .chat-container::-webkit-scrollbar-track {
-    background-color: #1f1f1f; /* Set scrollbar track color */
+    background-color: #1f1f1f;
 }
 
 .chat-container::-webkit-scrollbar-thumb {
-    background-color: #00c6ff; /* Set scrollbar thumb color */
-    border-radius: 4px; /* Set scrollbar thumb border radius */
+    background-color: #00c6ff;
+    border-radius: 4px;
 }
 input[type="text"] {
     width: 100%;
